...
                          'Music',
                          'Quo Vadis Theater',
                          'Skala Teens',
                          'VBS',
                          'United Service',
                          'Women\'s Ministries',
                          'Youth',
                        ].map((m) {
                          return DropdownMenuItem<String>(
                            value: m,
                            child: Text(m ?? 'All Ministries').localized(),
                          );
                        }).toList(),
...
